this is me adding new features

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>My Portfolio Page</title>
 </head>
 <body>
-    <h1>Welcome to my Portfolio</h1>    
+    <h1>Welcome to my Portfolio</h1>
+    <h2>tutor has helped</h2>    
+</body>    
 </body>
 </html>
